Fixed overflow bug with midwitch map

--- a/index.css
+++ b/index.css
@@ -21,8 +21,10 @@ h1 {
     color: white;
     text-align: center;
 }
+
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
+.dropbtn:hover,
+.dropbtn:focus {
     background-color: #3e8e41;
 }
 
@@ -74,7 +76,7 @@ h1 {
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: #f1f1f1
+    background-color: #f1f1f1;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
@@ -84,11 +86,14 @@ h1 {
 
 #view {
     margin-left: 20px;
+    height: 100vh;
+    width: auto;
+    overflow: hidden;
 }
 
-img {
-    margin: 0;
-    height: 100vh;
+#view img {
+    height: 100%;
+    max-width: 100%;
 }
 
 body {
